# component-sdk

./: Dockerfile  README.md  humble-devel-hash  humble-hash
.github/actions/build-push/: action.yml
.github/actions/build-push-multi-arch/: action.yml
.github/actions/write-hash/: action.yml
.github/workflows/: build-push-develop.yml  build-push-latest.yml  build-push-tagged.yml  check-upstream.yml  manual-dispatch.yml
schema/: Dockerfile  README.md  serve-html.sh  validate.sh
schema/examples/: foo.json  inheritance.json
schema/schema/: component.schema.json  encoded_state_type.schema.json  parameter.schema.json  parameter_type.schema.json  predicate.schema.json  service.schema.json  signal.schema.json  signal_collection.schema.json  signal_type.schema.json
scripts/: create_component_package.sh  install_component_package.sh
source/template_component_package/: CMakeLists.txt  Dockerfile  README.md  build-server.sh  install_dependencies.sh  package.xml  setup.cfg
source/template_component_package/component_descriptions/: README.md
source/template_component_package/include/template_component_package/: CPPComponent.h  CPPComponent.hpp  CPPLifecycleComponent.h
source/template_component_package/src/: CPPComponent.cpp  CPPLifecycleComponent.cpp
source/template_component_package/template_component_package/: py_component.py  py_lifecycle_component.py
source/template_component_package/test/python_tests/: conftest.py  test_py_component.py  test_py_lifecycle_component.py
