[options.entry_points]
console_scripts =
    # update below to change the python node
    py_component = template_component_package.py_component:main
python_components =
    # update below to change the python component
    template_component_package::PYComponent = template_component_package.py_component:PYComponent
